--- a/server/doc/用户/用户表.md
+++ b/server/doc/用户/用户表.md
@@ -7,6 +7,7 @@
 |     id      |      ID      |   int(11)    |
 |  username   |    用户名    | varchar(255) |
 |  password   |     密码     | varchar(255) |
+| passwd_salt |     密钥     | varchar(255) |
 |    email    |     邮箱     | varchar(255) |
 |    phone    |    手机号    | varchar(255) |
 |   gender    |     性别     |   tinyint    |
@@ -23,6 +24,7 @@ CREATE TABLE `users` (
 `id` int(11) NOT NULL AUTO_INCREMENT,
 `username` varchar(255) NULL,
 `password` varchar(255) NULL,
+`passwd_salt` varchar(255) NULL,
 `last_login` datetime NULL DEFAULT CURRENT_TIMESTAMP,
 `create_time` datetime NULL DEFAULT CURRENT_TIMESTAMP,
 `status` tinyint(255) NULL DEFAULT 1,
