--- a/server/doc/用户/角色资源表.md
+++ b/server/doc/用户/角色资源表.md
@@ -9,3 +9,11 @@
 | resource_id | 资源 ID | int(11) |
 
 ## 2. 创建
+
+```sh
+CREATE TABLE `role_resource` (
+`role_id` int(11) NOT NULL AUTO_INCREMENT,
+`resource_id` int(255) NOT NULL,
+PRIMARY KEY (`role_id`, `resource_id`)
+);
+```
