--- a/server/doc/用户/用户角色表.md
+++ b/server/doc/用户/用户角色表.md
@@ -10,5 +10,10 @@
 ## 2. 创建
 
 ```bash
+CREATE TABLE `user_role` (
+`user_id` int(11) NOT NULL AUTO_INCREMENT,
+`role_id` int(255) NOT NULL,
+PRIMARY KEY (`user_id`, `role_id`)
+);
 
 ```
