--- a/server/doc/用户/资源表.md
+++ b/server/doc/用户/资源表.md
@@ -13,5 +13,12 @@
 ## 2. 创建
 
 ```bash
-
+CREATE TABLE `resources` (
+`id` int(11) NOT NULL AUTO_INCREMENT,
+`name` varchar(255) NOT NULL,
+`key` varchar(255) NULL,
+`create_time` datetime NULL DEFAULT CURRENT_TIMESTAMP,
+`status` tinyint(255) NULL DEFAULT 1,
+PRIMARY KEY (`id`)
+);
 ```
